--- a/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.scss
@@ -2,7 +2,8 @@
 
 .soil-table {
   display: grid;
-  grid-template-columns: max-content max-content max-content;
+  grid-template-columns: 0.625fr 1fr 1fr;
+
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
