Finish Public App View
* Add ALC Tab and L/FNG Tab
* Add DTOs for Parcel and Document to minimize exposed data

--- a/portal-frontend/src/app/features/public/application/alc-review/decisions/decisions.component.html
+++ b/portal-frontend/src/app/features/public/application/alc-review/decisions/decisions.component.html
@@ -1,5 +1,5 @@
-<div *ngFor="let decision of decisions; let index = index">
-  <h4>Decision #{{ decisions.length - index }}</h4>
+<div *ngFor="let decision of applicationDecisions; let index = index">
+  <h4>Decision #{{ applicationDecisions.length - index }}</h4>
   <div class="decision-table">
     <div>
       <div class="subheading2">Decision Date</div>
@@ -15,7 +15,6 @@
       <div class="subheading2">Decision Outcome</div>
       {{ decision.outcome.label }} {{ decision.isSubjectToConditions ? '- Subject to Conditions' : '' }}
     </div>
-
     <div>
       <div class="subheading2">Decision Document</div>
       <div *ngFor="let document of decision.documents">
